--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "everlife-token-sale-service",
-  "version": "1.1.5",
+  "version": "1.1.6",
   "private": true,
   "scripts": {
     "start": "node $NODE_DEBUG_OPTION ./src/bin/www",
@@ -26,7 +26,6 @@
     "multer": "^1.4.0",
     "multer-s3": "^2.7.0",
     "njwt": "^0.4.0",
-    "nodemon": "^1.18.4",
     "pug": "^2.0.3",
     "request": "^2.88.0",
     "request-promise": "^4.2.2",
@@ -34,5 +33,8 @@
     "shortid": "^2.2.13",
     "stellar-sdk": "^0.10.3",
     "uuid": "^3.3.2"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.7"
   }
 }
